EMS: Minor code style improvements